--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,14 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+	"baseUrl": ".",
+	"paths": {
+		"@app": ["src/app"],
+		"@app/*": ["src/app/*"],
+		"@pages": ["src/pages"]
+	}
   },
   "include": ["src"]
 }
